# wezterm-agent-dashboard

./: AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  hook.sh
.claude/: settings.json
.codex/rules/: cargo.rules
.github/workflows/: ci.yml  release.yml
docs/: README_ja.md
examples/: perf_probe.rs
lua/: wezterm-agent-dashboard.lua
plugin/: init.lua
scripts/: check-release-targets.sh  release-targets.txt  update-formula.sh
src/: activity.rs  git.rs  group.rs  lib.rs  main.rs  state.rs  usage.rs  user_vars.rs  wezterm.rs
src/cli/: hook.rs  label.rs  mod.rs  toggle.rs
src/ui/: agents.rs  bottom.rs  colors.rs  mod.rs  text.rs
