[package]
name = "wezterm-agent-dashboard"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A WezTerm dashboard that monitors AI coding agents across all panes and workspaces"
repository = "https://github.com/0maru/wezterm-agent-dashboard"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
unicode-width = "0.2"
indexmap = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
time = { version = "0.3", features = ["formatting", "local-offset", "macros"] }

[dev-dependencies]
indoc = "2"

[profile.release]
strip = true
lto = true
